--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -1,4 +1,4 @@
-<h2 class="page-title text-center">רשימת מיילים</h2>
+<h2 class="page-title text-center">ניהול פניות ציבור</h2>
 
 
 <div class="container-fluid">
